--- a/recap/javascript/jQuery/css/style.css
+++ b/recap/javascript/jQuery/css/style.css
@@ -40,6 +40,18 @@
   color: #ffffff;
   background-color: #000088; }
 
+.yellow-box {
+  float: left;
+  width: 80px;
+  height: 80px;
+  margin: 10px 10px 10px 0;
+  padding: 10px;
+  color: #ffffff;
+  background-color: #e4f804; 
+}
+
+
+
 .large {
   font-size: 125%;
 }
@@ -81,7 +93,6 @@ input[type="submit"] {
 
 html {
   min-height: 100%;
-  background-color: #0769ad;
   box-shadow: 0 0 8px 4px #06599d inset; }
 
 body {
@@ -146,3 +157,5 @@ h2 {
 .fancy-text {
   font-style: italic;
 }
+
+
