--- a/projects/amz-eg/css/footer_style.css
+++ b/projects/amz-eg/css/footer_style.css
@@ -140,12 +140,19 @@ footer {
 
 /*///////////////////////////////////////////////////////////////*/
 
+.main-footer__content-cp-wrapper {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
 .main-footer__content-cp {
     background-color: var(--dark-blue);
     color: var(--footer-text-grey1);
     font-size: 0.7rem;
     text-align: center;
     padding: 2em 0 2em 0;
+    min-width: 20rem;
 
 
 }
@@ -153,7 +160,7 @@ footer {
 .main-footer__content-cp-list {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     list-style-type: none;
 
 }
