--- a/projects/amz-eg/css/admin-products.css
+++ b/projects/amz-eg/css/admin-products.css
@@ -2,13 +2,17 @@
 main {
     height: auto;
     padding-bottom: 4rem;
+    margin: 0;
 }
 
 .main__main__top-bar {
     width: 100%;
+    min-width: 350px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center; /*for caret*/
+
     border-top: 1px solid var(--footer-text-grey2);
     border-bottom: 1.5px solid var(--footer-text-grey2);
     padding: 0.75rem;
@@ -19,13 +23,17 @@ main {
 
 
 .main__main__top-bar--sort {
+    appearance: none;
     border-radius: 8px;
     background-color: var(--sort-button-grey);
     border: 1px solid var(--sort-button-grey-border);
     color: var(--sort-button-text);
-    padding: 2px 3px;
+    padding: 0.3rem 0.6rem;
+    padding-right: 1rem; /*for caret*/
     font-size: 0.8rem;
     box-shadow: 0 2px 5px rgba(15,17,17,.15);
+    -webkit-box-shadow: 0 2px 5px rgba(15,17,17,.15); 
+    -moz-box-shadow: 0 2px 5px rgba(15,17,17,.15);
 }
 
 .main__main__top-bar--sort:hover {
@@ -33,26 +41,46 @@ main {
     
 }
 
+.main__main__top-bar-container {
+    max-width: 1500px;
+    display: flex;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+
+
+}
+
 
 
 /*///////////////////////////////////////////////////////////////*/
 
 
-.main__main__products-list--text {
-    color: var(--product-list-text);
-    font-size: 0.8rem;
-    margin: 1rem 0.5rem;
-}
+
 
 .main__main__products-list {
     padding: 0 0.5rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    /* max-width: 800px; */
+    min-width: 350px;
+    align-items: center;
+
 }
 
+.main__main__products-list--text {
+    color: var(--product-list-text);
+    font-size: 0.8rem;
+    margin-right: auto;
+    margin-top: 1rem;
+    
+}
 
-
+.main__main__products-list--text--header {
+    display: none;
+}
 
 /*///////////////////////////////*/
 
@@ -62,21 +90,26 @@ main {
     flex-direction: row;
     gap: 5%;
     border-radius: 7px;
-    padding: 3px;
+    padding: 0.5em;
     align-items: center;
+    max-height: 25rem;
+    /* font-size: 0.8em; */
+    font-size: 0.8em; /*0.8 200's - 400's 1, 550 1.2*/
 
 }
 
 .main__main__products-list--item--image {
-    width: 45%;
-    height: 100%;
+    max-height: 13em;
 }
+
 
 
 .main__main__products-list--item--description {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    width: 100%;
+    gap: 0.5em;
+
 }
 
 .main__main__products-list--item--description--header-link {
@@ -93,7 +126,11 @@ main {
     border-radius: 3px;
     color: rgba(0, 0, 0, 0.8);
     text-align: center;
-    font-size: 0.7rem;
+    font-size: 0.7em;
+}
+
+.main__main__products-list--item--description--rating > * {
+    cursor: pointer;
 }
 
 .main__main__products-list--item--description--rating--rate {
@@ -109,7 +146,7 @@ main {
 
 .main__main__products-list--item--description--price {
     display: flex;
-    gap: 0.1rem;
+    gap: 0.1em;
 }
 
 .main__main__products-list--item--description--price--currency,
@@ -117,24 +154,24 @@ main {
     text-transform: uppercase;
     font-size: 0.7rem;
     font-weight: 300;
-    padding-top: 0.25rem;
+    padding-top: 0.25em;
 }
 
 
 .main__main__products-list--item--description--price--number {
-    font-size: 1.5rem;
+    font-size: 1.5em;
 }
 
 
 .main__main__products-list--item--description--sold {
-    color: rgb(63, 104, 63);
-    font-size: 0.9rem;
+    color: rgba(1, 110, 72, 0.9);
+    font-size: 0.9em;
 
 }
 
 .main__main__products-list--item--description--available {
     font-weight: 200;
-    font-size: 0.9rem;
+    font-size: 0.9em;
 }
 
 
@@ -145,26 +182,28 @@ main {
 .main__main__products-list--item--description-buttons-edit,
 .main__main__products-list--item--description-buttons-delete,
 .main__main__products-list--item--description-buttons-add {
-    padding: 0.1rem 0.6rem;
+    padding: 0.1em 0.6em;
     border: 0;
     border-radius: 2px;
+    font-size: 1em;
+
 
 }
 
 
 .main__main__products-list--item--description-buttons-edit {
 
-    background-color: rgb(255, 238, 0, 0.6);
+    background-color: rgba(255, 238, 0, 0.85);
     color: rgba(55, 55, 55);
 }
 
 .main__main__products-list--item--description-buttons-delete {
-    background-color: rgba(234, 0, 23, 0.6);
+    background-color: rgba(234, 0, 23, 0.7);
     color: white;
 }
 
 .main__main__products-list--item--description-buttons-add {
-    background-color: rgb(10, 193, 129, 0.8);
+    background-color: rgba(1, 110, 72, 0.85);
     color: white;
 }
 
@@ -176,10 +215,144 @@ main {
 
 .main__main__products-list--item--description-buttons-delete:hover,
 .main__main__products-list--item--description-buttons-delete:focus {
-    background-color: rgba(234, 0, 23, 0.7);
+    background-color: rgba(234, 0, 23, 0.8);
 }
 
 .main__main__products-list--item--description-buttons-add:hover,
 .main__main__products-list--item--description-buttons-add:focus {
-    background-color: rgb(10, 193, 129, 1);
+    background-color: rgba(1, 110, 72, 1);
+}
+
+
+
+
+
+.main__main__side-list {
+    display: none;
+}
+
+
+
+@media only screen and (min-width: 400px) {
+
+    .main__main__products-list--item {
+        font-size: 1em; /*0.8 200's - 400's 1, 550 1.2*/
+
+    }
+    .main__main__products-list--item--image {
+        max-height: 13em;
+    }
+    
+}
+
+@media only screen and (min-width: 550px) {
+
+    .main__main__products-list--item {
+        font-size: 1em; /*0.8 200's - 400's 1, 550 1.2*/
+        width: 90%;
+    
+    }
+    .main__main__products-list--item--image {
+        max-height: 13em;
+    }
+
+    .main__main__products-list--item--description-buttons {
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+    }
+    .main__main__products-list--item--description-buttons-edit,
+    .main__main__products-list--item--description-buttons-delete,
+    .main__main__products-list--item--description-buttons-add {
+        padding: 0.15em 0.6em;
+        border-radius: 2.5px;
+        font-size: 0.9em;
+        margin-right: 0.5em;
+    
+    
+    }
+    
+    
+}
+
+/*///////////////////////////////////////////////////////////////*/
+
+@media only screen and (min-width: 900px) {
+
+    .main__main__wrapper {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 0 0.5rem;
+
+    }
+
+    .main__main__products-list--text {
+        width: 100%;
+        max-width: 1500px;
+        display: inline;
+        font-size: 1rem;
+    }
+
+    .main__main__products-list--text--header {
+        display: block;
+        font-size: 1.3rem;
+        color: black;
+    }
+
+    .main__main__content {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        max-width: 1500px;
+    }
+
+    .main__main__products-list {
+        align-items: flex-start;
+        flex: 1;
+        padding-right: 0;
+        
+    }
+
+    .main__main__products-list--item--description--header-link {
+        font-weight: 400;
+    }
+
+
+    .main__main__side-list {
+        display: block;
+        width: min(25vw, 250px);
+        margin-top: 1rem;
+        padding-left: 1rem;
+        border-right: 1px solid var(--footer-text-grey1);
+    }
+
+
+    .main__main__side-list--header {
+        font-size: 1rem;
+        color: var(--side-cat-grey1);
+    }
+
+    .main__main__side-list--list {
+        width: 100%;
+
+
+    }
+
+    .main__main__side-list--list-item {
+        list-style-type: none;
+        margin: 0.5rem 0;
+
+    }
+
+    .main__main__side-list--list--item-link {
+        text-decoration: none;
+        color: var(--side-cat-grey2);
+    }
+    
+
+
+
 }
