--- a/projects/amz-eg/css/admin-products.css
+++ b/projects/amz-eg/css/admin-products.css
@@ -88,18 +88,27 @@ main {
     border: 1px solid rgba(0, 0, 0, 0.02);
     display: flex;
     flex-direction: row;
-    gap: 5%;
     border-radius: 7px;
+    /* padding: 0.5em; */
+    max-height: 14rem;
+    /* font-size: 1em; */
+    /*0.8 200's - 400's 1, 550 1.2 */
+    /* width: 90%; */
+
+}
+
+
+.main__main__products-list--item--image--container {
+    max-height: 13em;
     padding: 0.5em;
-    align-items: center;
-    max-height: 25rem;
-    /* font-size: 0.8em; */
-    font-size: 0.8em; /*0.8 200's - 400's 1, 550 1.2*/
+    background-color: rgb(246, 246, 246);
 
 }
 
 .main__main__products-list--item--image {
-    max-height: 13em;
+    /* height: 100%; */
+    max-height: 10em;
+
 }
 
 
@@ -108,14 +117,21 @@ main {
     display: flex;
     flex-direction: column;
     width: 100%;
-    gap: 0.5em;
+    /* gap: 0.4em; */
+    /* padding: 0.5em 0; */
+    /* font-size: 0.5em; */
+    padding: 0.4em 0.4em 0.4em 0.4em ;
+    justify-content: flex-start;
+    gap: 0.2em;
+
 
 }
 
 .main__main__products-list--item--description--header-link {
     text-decoration: none;
     color: black;
-    font-weight: 300;
+    font-weight: 400;
+    font-size: 0.9em;
 }
 
 .main__main__products-list--item--description--color {
@@ -126,7 +142,7 @@ main {
     border-radius: 3px;
     color: rgba(0, 0, 0, 0.8);
     text-align: center;
-    font-size: 0.7em;
+    font-size: 0.6em;
 }
 
 .main__main__products-list--item--description--rating > * {
@@ -136,56 +152,70 @@ main {
 .main__main__products-list--item--description--rating--rate {
     color: var(--product-rating-blue);
     font-weight: 300;
+    font-size: 0.6em;
 
+}
+
+.main__main__products-list--item--description--rating--stars {
+    font-size: 0.5em;
 }
 
 .main__main__products-list--item--description--rating--number {
     font-weight: 200;
+    font-size: 0.6em;
+
 
 }
 
 .main__main__products-list--item--description--price {
     display: flex;
     gap: 0.1em;
+    font-size: 1em;
+
 }
 
 .main__main__products-list--item--description--price--currency,
 .main__main__products-list--item--description--price--decimal {
     text-transform: uppercase;
-    font-size: 0.7rem;
+    font-size: 0.7em;
     font-weight: 300;
     padding-top: 0.25em;
 }
 
 
 .main__main__products-list--item--description--price--number {
-    font-size: 1.5em;
+    /* font-size: 1.5em; */
 }
 
 
 .main__main__products-list--item--description--sold {
     color: rgba(1, 110, 72, 0.9);
-    font-size: 0.9em;
+    font-size: 0.7em;
 
 }
 
 .main__main__products-list--item--description--available {
     font-weight: 200;
-    font-size: 0.9em;
+    font-size: 0.7em;
 }
 
 
 .main__main__products-list--item--description-buttons {
 
+
 }
+
 
 .main__main__products-list--item--description-buttons-edit,
 .main__main__products-list--item--description-buttons-delete,
 .main__main__products-list--item--description-buttons-add {
-    padding: 0.1em 0.6em;
+    padding: 0.1em 0.6em 0.15em 0.5em;
     border: 0;
-    border-radius: 2px;
-    font-size: 1em;
+    /* border-radius: 2px; */
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;
+
+    font-size: 0.8em;
 
 
 }
@@ -193,34 +223,38 @@ main {
 
 .main__main__products-list--item--description-buttons-edit {
 
-    background-color: rgba(255, 238, 0, 0.85);
-    color: rgba(55, 55, 55);
+    /* background-color: rgba(255, 238, 0, 0.85); */
+    /* color: rgba(55, 55, 55); */
+    border-left: 0.2em solid rgba(255, 238, 0.6);
 }
 
 .main__main__products-list--item--description-buttons-delete {
-    background-color: rgba(234, 0, 23, 0.7);
-    color: white;
+    /* background-color: rgba(234, 0, 23, 0.7); */
+    /* color: white; */
+    border-left: 3px solid rgba(234, 0, 23, 0.6);
 }
 
 .main__main__products-list--item--description-buttons-add {
-    background-color: rgba(1, 110, 72, 0.85);
-    color: white;
+    /* background-color: rgba(1, 110, 72, 0.85); */
+    /* color: white; */
+    border-left: 3px solid rgba(1, 110, 72, 0.6);
+
 }
 
 .main__main__products-list--item--description-buttons-edit:hover,
 .main__main__products-list--item--description-buttons-edit:focus {
 
-    background-color: rgb(255, 238, 0, 1);
+    border-left: 0.2em solid rgb(255, 247, 0.3);
 }
 
 .main__main__products-list--item--description-buttons-delete:hover,
 .main__main__products-list--item--description-buttons-delete:focus {
-    background-color: rgba(234, 0, 23, 0.8);
+    border-left: 3px solid rgba(234, 0, 23, 1);
 }
 
 .main__main__products-list--item--description-buttons-add:hover,
 .main__main__products-list--item--description-buttons-add:focus {
-    background-color: rgba(1, 110, 72, 1);
+    border-left: 3px solid rgba(1, 110, 72, 1);
 }
 
 
@@ -232,47 +266,152 @@ main {
 }
 
 
-
-@media only screen and (min-width: 400px) {
-
-    .main__main__products-list--item {
-        font-size: 1em; /*0.8 200's - 400's 1, 550 1.2*/
-
-    }
-    .main__main__products-list--item--image {
-        max-height: 13em;
-    }
-    
-}
-
-@media only screen and (min-width: 550px) {
-
-    .main__main__products-list--item {
-        font-size: 1em; /*0.8 200's - 400's 1, 550 1.2*/
-        width: 90%;
-    
-    }
-    .main__main__products-list--item--image {
-        max-height: 13em;
+    .main__main__products-list--item--description > * {
+        flex: 1
+        
     }
 
-    .main__main__products-list--item--description-buttons {
+    .main__main__products-list--item--description--spacer {
+        flex: 2;
         width: 100%;
-        display: flex;
-        justify-content: flex-end;
     }
+
+    
+
+
+
+    
+
+
+@media only screen and (min-width: 400px) { 
+
+    .main__main__products-list--item--image--container {
+        height: 100%;
+        max-height:20rem;
+
+    }
+
+    .main__main__products-list--item--image {
+        /* max-height: 13em; */
+        /* max-height: 10em; */
+        height: 100%;
+        max-height: 12em;
+
+    }
+
+    .main__main__products-list--item--description {
+        font-size: 1.1em;
+        padding: 0.7em 0.7em 0.7em 0.7em ;
+
+    }
+
+    
+
     .main__main__products-list--item--description-buttons-edit,
     .main__main__products-list--item--description-buttons-delete,
     .main__main__products-list--item--description-buttons-add {
         padding: 0.15em 0.6em;
         border-radius: 2.5px;
         font-size: 0.9em;
-        margin-right: 0.5em;
     
     
     }
-    
-    
+
+
+
+
+}
+
+
+@media only screen and (min-width: 550px) {
+
+    .main__main__products-list--item {
+        max-height: 20rem;
+        background-color: aliceblue;
+    }
+
+
+    .main__main__products-list--item--image {
+        /* max-height: 13em; */
+        /* max-height: 10em; */
+        max-height: 15em;
+
+    }
+    .main__main__products-list--item--description--header-link {
+        font-size: 1.2em;
+    }
+
+    .main__main__products-list--item--description-buttons {
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+        gap: 0.5em;
+    }
+
+
+
+.main__main__products-list--item--description--color {
+
+    font-size: 0.8em;
+}
+
+
+.main__main__products-list--item--description--rating--rate {
+    font-weight: 300;
+    font-size: 1em;
+
+}
+
+.main__main__products-list--item--description--rating--stars {
+    font-size: 1em;
+}
+
+.main__main__products-list--item--description--rating--number {
+    font-size: 1em;
+
+
+}
+
+.main__main__products-list--item--description--price {
+    gap: 0.15em;
+
+}
+
+.main__main__products-list--item--description--price--currency,
+.main__main__products-list--item--description--price--decimal {
+    font-size: 0.8em;
+    font-weight: 300;
+    padding-top: 0.6em;
+}
+
+
+.main__main__products-list--item--description--price--number {
+    font-size: 1.8em;
+}
+
+
+.main__main__products-list--item--description--sold {
+    font-size: 1em;
+
+}
+
+.main__main__products-list--item--description--available {
+    font-size: 1em;
+}
+
+
+.main__main__products-list--item--description-buttons-edit,
+.main__main__products-list--item--description-buttons-delete,
+.main__main__products-list--item--description-buttons-add {
+    font-size: 1.1em;
+
+
+}
+
+
+
+
+
 }
 
 /*///////////////////////////////////////////////////////////////*/
@@ -314,6 +453,10 @@ main {
         flex: 1;
         padding-right: 0;
         
+    }
+
+    .main__main__products-list--item {
+        width: 100%;
     }
 
     .main__main__products-list--item--description--header-link {
