--- a/projects/amz-eg/css/login_style.css
+++ b/projects/amz-eg/css/login_style.css
@@ -4,12 +4,15 @@
     width: 100vw;
     display: flex;
     justify-content: center;
-    padding: 0.5rem;
+    align-items: center;
+    padding: 1rem 0.5rem;
 }
 
 .main__login__container {
     width: 100%;
     /* background-color: red; */
+    max-width: 450px;
+    min-width: 360px;
     
 }
 
@@ -74,12 +77,12 @@
 
 }
 
-.login__header {
+.login__header, .signup__header {
     margin-left: 0.5rem;
     font-weight: 500;
 }
 
-.login__header2 {
+.login__header2, .signup__header2 {
     font-size: 0.9rem;
 }
 
@@ -87,35 +90,42 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    border: 1px dashed black;
+    /* border: 1px dashed black; */
+    min-height: 15em;
+
 }
 
-.login__email--label {
+
+.login__email--label, .signup__name-label, .signup__telephone-label  {
     margin-left: 0.5rem;
 }
 
-#login__email--field {
-    padding: 0.75em;
-    border: inset 0.2px solid black;
+#login__email--field, #signup__name--field, #signup__password--field, #signup__telephone--input {
+    padding: 0.75rem;
+    border: 1px solid rgb(190,190,190,0.9);
+    border-radius: 3px;
 
 }
 
-#login__email--continue {
+#login__email--continue, #signup__verify-button {
     margin-top: 0.5rem;
     height: 2.7rem;
     border-radius: 7px;
     border: 0px;
     background-color: var(--button-yellow2);
     font-weight: 400;
+    box-shadow:  2px 2px 4px 1px rgba(245, 245, 245, 0.5);
+
 }
 
-.login__email--agreement {
+.login__email--agreement, .signup__agreement {
     font-weight: 400;
     margin-top: 0.2rem;
 
 }
 
-.login__email--agreement a, .login__email--help-links a {
+.login__email--agreement a, .login__email--help-links a,
+.signup__agreement a {
     text-decoration: none;
     color: var(--product-rating-blue);
 }
@@ -134,7 +144,7 @@
 }
 
 .main__login__container__fields-container--login--content {
-    height: 100%;
+    height: 100% !important;    /*jQuery adds a fixed html inline height so the summary does not extend the container*/
 }
 
 
@@ -145,8 +155,13 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    border: 1px dashed black;
+    /* border: 1px dashed black; */
+    min-height: 15em;
+}
+
+.login__password--container--wrapper {
     display: none;
+
 }
 
 .login__password--header {
@@ -174,7 +189,7 @@
     border: 0px;
     background-color: var(--button-yellow2);
     font-weight: 400;
-    
+    margin-top: auto;
 }
 
 
@@ -205,3 +220,126 @@
 .login__password--options-side1 label span {
     padding-left: 0.5rem;
 }
+
+
+.login__password--current-phone--change {
+    color: var(--product-rating-blue);
+    cursor: pointer;
+    font-size: 0.95rem;
+
+
+}
+
+
+
+
+/*///////////////////////////////////////////////////////////////*/
+
+
+.main__login__container__fields-container--signup--content {
+    display: none;
+    height: auto;
+
+}
+
+.main__signup__container__fields-container--signup--form {
+
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    min-height: 15em;
+    padding: 1em;
+
+}
+
+
+
+
+
+.signup__telephone__content {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+}
+
+.signup__telephone-label {
+    width: 100%;
+}
+
+#signup__telephone--input {
+    flex: 1;
+    margin-left: 0.5rem;
+}
+
+.signup__telephone--region {
+    padding: 0.75rem;
+    width: 9rem;
+    padding: 0 0.5rem;
+    border-radius: 6px;
+    border: 0.5px solid rgb(190, 190, 190, 0.3);
+    box-shadow:  2px 2px 4px 1px rgba(245, 245, 245, 0.7);
+    font-weight: 300;
+}
+
+
+.signup__input-field {  /*wrapper*/
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.signup__password--field {
+    width: 100%;
+}
+
+.signup__password--notify {
+    color: var(--product-list-text);
+}
+
+.signup__password--notify em {
+    color: var(--product-rating-blue);
+}
+
+
+@media screen and (min-width: 650px) {
+    .main__login__wrapper {
+        padding: 3rem 0.5rem;
+    }
+    
+}
+
+/*not cause below 360 to have the form clipped from left*/
+@media screen and (max-width: 360px) {
+    .main__login__wrapper {
+        display: block;
+    }
+    
+}
+
+
+
+.login__email--field--message, .login__password--field--message, 
+.signup__email--field--message, .signup__telephone--field--message, .signup__password--field--message {
+    height: 15px;
+    color: var(--footer-text-grey3);
+    font-size: 0.9rem;
+    font-style: italic;
+}
+
+.signup--label-wrapper {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    width: 100%;
+}
+
+.login__password--field--message {
+    margin: 0.1em 0.2em;
+}
+
+.signup__telephone--field--message {
+    white-space: nowrap;
+}
+
+
