--- a/projects/amz-eg/css/login_style.css
+++ b/projects/amz-eg/css/login_style.css
@@ -191,8 +191,8 @@
     height: 2.7rem;
     border-radius: 7px;
     border: 1px;
-    border-color: var(--button-yellow2);
-    background-color: var(--button-yellow2);
+    border-color: var(--button-yellow);
+    background-color: var(--button-yellow-border);
     font-weight: 400;
     margin-top: auto;
 }
@@ -348,8 +348,8 @@
 #login__email--continue:enabled:hover, #login__email--continue:enabled:focus,
 #signup__verify-button:enabled:hover, #signup__verify-button:enabled:focus
  {
-    background-color: var(--button-yellow);
-    border: 1px solid var(--button-yellow2);
+    background-color: var(--button-yellow-hover);
+    border: 1px solid var(--button-yellow-hover-border);
     cursor: pointer;
 }
 
