--- a/projects/amz-eg/css/orders_style.css
+++ b/projects/amz-eg/css/orders_style.css
@@ -19,6 +19,8 @@ main {
     /* background-color: red; */
     /* max-width: 450px; */
     min-width: 350px;
+    max-width: 950px;
+
 
     display: flex;
     flex-direction: column;
@@ -74,34 +76,50 @@ Row 2
     flex-direction: column;
     justify-content: space-between;
     gap: 0.5rem;
+    height: 4rem;
+    align-items: center;
 
 }
 
 .main__main__content__orders-header--header {
     font-weight: 400;
+    margin-right: auto;
 }
 
 .main__main__content__orders-header--search__container {
     /* width: 200px; */
     /* border: 1px solid red; */
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
+    /* display: flex; */
+    /* flex-direction: row; */
+    /* justify-content: flex-end; */
+    /* align-items: center; */
     width: 100%;
+
 
 }
 
 .main__main__content__orders-header--search--field--container {
     /* position: relative; */
-    flex: 1;
+    /* display: flex;
+    flex-direction: row; */
+    /* width: 100%; */
+    /* flex: 1; */
 
+
+}
+
+.main__main__content__orders-header--search--field--container2 {
+    display: flex;
+    flex-direction: row;
+    /* flex: 1; */
+    width: 100%;
+    /* background-color: red; */
 }
 
 .logo_container {
     position: relative;
     /* flex: 1; */
-    background-color: red;
+    /* background-color: red; */
 }
 
 .main__main__content__orders-header--search--logo {
@@ -113,28 +131,31 @@ Row 2
 
     position: absolute;
     top: 100%;
-    margin-top: 0.5rem;
-    left: 0rem;
+    margin-top: -0.4rem;
+    left: 0.4rem;
     z-index: 2;
+    flex: 0;
 
 }
 
 .main__main__content__orders-header--search--field {
-    height: 2rem;
+    appearance: none;
+    height: 2.2rem;
     padding-left: 1.9rem;
     border: 1px solid var(--orders-search-field-border);
     box-shadow: 0 1px 2px rgba(15,17,17,.15) inset;
     /* -webkit-appearance: textfield; */
     border-radius: 4px;
-    width: 100%;
-    max-width: 350px;
-    position: relative;
-
+    /* width: 100%; */
+    /* max-width: 331px; */
+    /* position: relative; */
+    min-width: 60vw;
+    flex: 1;
 
 
 }
 
-.main__main__content__orders-header--search--field:focus-visible {
+.main__main__content__orders-header--search--field:focus {
 
     background-color: var(--orders-search-field-hover-bg);
     outline: 2px solid var(--orders-search-field-hover-border);
@@ -142,16 +163,17 @@ Row 2
 
 
 .main__main__content__orders-header--search--button {
-    height: 2rem;
+    height: 2.1rem;
     background-color: black;
     border: 1px solid black;
-    border-radius: 8px;
     color: white;
-    margin-left: 0.5rem;
+    margin: 0 0.5rem;
     border-radius: 100px;
-    padding: 0.2rem 1rem;
+    padding: 0.2rem 0.6rem;
     box-shadow: 0 2px 5px 0 rgba(213,217,217,.5);
-    font-weight: 500;
+    font-weight: 600;
+    min-width: 7.7rem;
+    flex: 0;
 
 
 }
@@ -181,6 +203,7 @@ Row 3
     list-style-type: none;
     border-bottom: 1px solid var(--footer-text-grey1);
     height: 100%;
+    font-weight: 500;
 }
 
 
@@ -190,6 +213,9 @@ Row 3
     height: 104%;
     display: block;
     padding-top: 0.75rem;
+    /* border: 1px solid red; */
+    text-align: center;
+    font-size: min(4vw,1rem);
 
 }
 
@@ -215,7 +241,19 @@ Row 3
 
 }
 
+.main__main__content__orders-header--search__container {
 
+    height: 100%;
+}
+
+.main__main__content__orders-header--search--field--container {
+    /* position: relative; */
+    flex: 1;
+    height: 100%;
+    display: flex;
+    align-items: center;
+
+}
 
 .orders_amount__filter__container {
     position: relative;
@@ -228,7 +266,7 @@ Row 3
     background: var(--sort-button-grey);
     box-shadow: 0 2px 5px rgba(15,17,17,.15);
     cursor: pointer;
-    padding: 0.5rem 1.5rem 0.5rem 0.5rem;
+    padding: 0.5rem 1.75rem 0.5rem 0.75rem;
     border: 1px solid var(--sort-button-grey-border);
     color: var(--sort-button-text);
 }
@@ -276,13 +314,13 @@ top header
     /* height: 500px; */
     display: flex;
     flex-direction: column;
-
+    max-width: 920px;
 }
 
 
 .orders__result--header-area {
     background-color: var(--sort-button-grey);
-    padding: 0.5rem;
+    padding: min(2vw,1rem) min(2vw, 1.5rem);
 
 }
 
@@ -321,7 +359,11 @@ top header
     /* color: var(--product-list-text); */
     font-size: 0.8rem;
     font-weight: 400;
-    margin-bottom: 0.5rem;
+    /* margin-bottom: 0.5rem; */
+}
+
+.orders__result--header--list--item:last-child {
+    text-align: right;
 }
 
 .orders__result--header--list--item a {
@@ -331,6 +373,10 @@ top header
     font-weight: 400;
     vertical-align: middle;
 
+}
+
+.orders__result--header--list--item a:last-child {
+    display: block;
 }
 
 .orders__result--header--list--item--order-details--separator {
@@ -343,7 +389,7 @@ items area
 */
 
 .orders__result--items--container {
-    padding: 0.5rem;
+    padding: 1rem 1.5rem 3rem 1.5rem;
     display: flex;
     flex-direction: column;
     /* flex-wrap: wrap; */
@@ -373,14 +419,14 @@ items area
     /* margin: 0.5rem 0 0.5rem 0; */
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 2rem;
 
 }
 
 .orders_result--item {
     display: flex;
     flex-direction: row;
-    border: 1px solid rgba(0, 0, 0, 0.041);
+    /* border: 1px solid rgba(0, 0, 0, 0.041); */
     /* margin-bottom: 1rem; */
     max-height: 119px;
 
@@ -389,13 +435,16 @@ items area
 
 .orders__result--item--image {
     /* flex:1; */
-    background-color: var(--sort-button-grey);
-    max-width: 125px;
+    /* background-color: var(--sort-button-grey); */
+    /* border: 1px solid red; */
+    max-width: 90px;
+    max-height: 90px;
 
 }
 
 .orders__result--item--image img {
-    max-height: 100%;
+    /* max-height: 100%; */
+    max-width: 100%;
 }
 
 
@@ -405,13 +454,13 @@ items area
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    padding-top: 0.25rem;
+    /* padding-top: 0.25rem; */
 
 
 }
 
 .orders__result--item--description--title  {
-    font-size: 1.15rem;
+    font-size: 1.0rem;
     font-weight: 400;
     max-width: 57vw;
     text-overflow: ellipsis;
@@ -424,24 +473,30 @@ items area
 
 .orders__result--item--description--note {
     font-size: 0.85rem;
-    font-weight: 500;
+    font-weight: 400;
 }
 
 .orders__result--item--description--links {
     flex: 2;
-    margin-top: 1rem;
+    /* margin-top: 1rem; */
 }
 
 .orders__result--item--description--links button {
     padding: 0.5rem 0.6rem;
+    font-size: 0.8rem;
 }
+
+.orders__result--item--description--links button:last-child {
+    margin-left: 0.5rem;
+}
+
 
 .yellow-button {
     border-radius: 7px;
     border: 1px solid var(--button-yellow-border);
     background-color: var(--button-yellow);
     font-weight: 400;
-    box-shadow:  2px 2px 4px 1px rgba(245, 245, 245, 0.5);
+    box-shadow:  0 2px 5px 0 rgba(213,217,217,.5);
     cursor: pointer;
     color: var(--sort-button-text);
     text-decoration: none;
@@ -458,7 +513,7 @@ items area
     background-color: var(--button-white);
     border: 1px solid var(--button-white-border);
     font-weight: 400;
-    box-shadow:  2px 2px 4px 1px rgba(245, 245, 245, 0.5);
+    box-shadow:  0 2px 5px 0 rgba(213,217,217,.5);
     color: var(--sort-button-text);
     text-decoration: none;
 
@@ -477,7 +532,7 @@ Row 5
 */
 
 .orders__result--item--description--links button {
-    font-size: 0.9rem;
+    /* font-size: 0.9rem; */
 }
 
 
@@ -497,34 +552,11 @@ Row 5
     white-space: nowrap;
     width: 48%;
     box-shadow: 0 2px 5px 0 rgba(213,217,217,.5);
+    font-size: 0.9rem;
 
 }
 
 
-@media screen and (min-width: 450px) {
-
-    
-.orders__result--header--list {
-    gap: 1rem;
-
-}
-
-.orders__result--header--list--item {
-    max-width: none;
-
-}
-
-.orders__result--header--list--item:nth-child(2) {
-    max-width: none;
-
-}
-
-.orders__result--header--list--item:last-child {
-    max-width: none;
-
-}   
-        
-}
 
 .main__main__content__orders-header--search--field {
     max-width: 250px;
@@ -534,6 +566,58 @@ Row 5
     display: flex;
     flex-direction: row;
 }
+
+
+
+@media screen and (min-width: 450px) {
+
+        
+    .orders__result--header--list {
+        gap: 1rem;
+
+    }
+
+    .orders__result--header--list--item {
+        max-width: none;
+
+    }
+
+    .orders__result--header--list--item:nth-child(2) {
+        max-width: none;
+
+    }
+
+    .orders__result--header--list--item:last-child {
+        max-width: none;
+
+    }   
+
+    .orders__result--item--description--links button {
+        padding: 0.5rem 0.6rem;
+        font-size: 0.9rem;
+    }
+    
+        
+}
+
+
+.orders__result--header--list--item--order-details--separator {
+    display: none;
+}
+
+@media screen and (min-width: 515px) {
+    .orders__result--header--list--item--order-details--separator {
+        display: inline;
+    }
+
+    .orders__result--header--list--item a:last-child {
+        display: inline;
+    }
+    
+
+}
+
+
 
 
 @media screen and (min-width: 530px) {
@@ -555,11 +639,27 @@ Row 5
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
+        
+    }
+
+    .main__main__content__orders-header--search--field--container2 {
+        justify-content: flex-end;
+        width: auto;
     }
 
     .main__main__content__orders-header--search--field {
-        max-width: none;
+        /* width: 200px; */
+        /* flex: 1; */
+        /* width: 100%; */
+        /* min-width: 200px; */
+        /* min-width: auto; */
         min-width: 250px;
+    }
+
+    .logo_container {
+        /* width: 20px;
+        height: 2px; */
+        background-color: rgba(172, 255, 47, 0.53);
     }
 
     .main__main__content__orders-header--search--logo {
@@ -572,13 +672,23 @@ Row 5
         position: absolute;
         top: 50%;
         margin-top: -6px;
-        left: 100%;
+        left: 0.5rem;
         z-index: 2;
+        
     
     }
     
     .main__main__content__orders-header--search--button {
-        min-width: 120px;
+        /* min-width: 120px; */
+    }
+
+    .page-tabs__list { 
+        justify-content: flex-start;
+        gap: 2rem;
+        padding-left: 2rem;
+    }
+
+    .page-tabs__tab {
     }
     
 
@@ -586,22 +696,23 @@ Row 5
 }    
 
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 700px) {
 
     .main__main__content {
-        max-width: 920px;
+        /* max-width: 920px; */
     }
 
     .main__main__content__orders__result__container {
-        max-width: 920px;
+        /* max-width: 920px; */
     }
 
     .orders__result--items--container {
-        padding: 0.5rem;
+        /* padding: 0.5rem; */
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         gap: 0.5rem;
+        justify-content: space-between;
     
     }
 
@@ -616,20 +727,22 @@ Row 5
     }
 
     .orders__result--control-links {
-        flex: 1;
+        /* flex: 1; */
         flex-direction: column;
         justify-content: flex-start;
+        width: fit-content;
+        margin-top: -3.6rem;
     }
 
     .orders__result--control-links--link {
         width: 100%;
-        max-width: 218px;
+        width: 218px;
         padding: 0.4rem 0;
     }
 
     
 .orders__result--item--description--title  {
-    font-size: 1.15rem;
+    /* font-size: 1.15rem; */
     font-weight: 400;
     max-width: 57vw;
     height: fit-content;
@@ -645,6 +758,34 @@ Row 5
 .orders__result--item--description--links {
     margin-top: 0;
     font-size: 1rem;
+}
+
+.main__main__content__orders-header--search--field {
+    min-width: 331px;
+}
+
+
+.page-tabs__tab {
+    padding: 0.75rem;
+}
+
+button.yellow-button {
+    position: relative;
+    padding-left: 3rem;
+}
+
+button.yellow-button::before {
+    content: "";
+    background-image: url("../img/buy-again.png");
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 1.9rem;
+    width: 1.9rem;
+    top: 0.1rem;
+    left: 0.2rem;
+    position: absolute;
+    z-index: 2;
 }
 
 
