Add accent-color to checkbox and radio selections

--- a/projects/amz-eg/css/login_style.css
+++ b/projects/amz-eg/css/login_style.css
@@ -1,4 +1,6 @@
-
+input[type="checkbox"], input[type="radio"] {
+    accent-color: var(--product-rating-blue);   
+}
 
 .main__login__wrapper {
     width: 100vw;
